--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -178,7 +178,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
+UNR=E:/CDV Gry/Projekt Zespołowy(2)/Interstellar Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBX=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBXAnim=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
@@ -1002,4 +1002,32 @@ HierarchicalLODOutliner.TimeStamp=2021.03.03-09.03.48
 HierarchicalLODOutliner.LastCompileMethod=Unknown
 EditorWidgets.TimeStamp=2021.03.03-09.03.46
 EditorWidgets.LastCompileMethod=Unknown
+AddContentDialog.TimeStamp=2021.03.03-09.03.05
+AddContentDialog.LastCompileMethod=Unknown
+WidgetCarousel.TimeStamp=2021.03.03-09.03.13
+WidgetCarousel.LastCompileMethod=Unknown
+
+[ContentBrowser]
+ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.Locked=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
+ContentBrowserTab1.ActiveFrontendFilters=
+ContentBrowserTab1.EnabledFrontendFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+FavoritePaths=
+ContentBrowserTab1.CollectionsExpanded=True
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ViewMode=0
+ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.CurrentViewType=1
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 
