--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -257,9 +257,41 @@ BoxComponent.Cooking=True
 BoxComponent.Events=True
 Killer_C.TransformCommon=True
 Killer_C.Default=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.ReflectionCaptureMobile=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=930.000 Y=263.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -277,7 +309,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/CDV Gry/Projekt Zespołowy(2)/Interstellar Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBX=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBXAnim=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
@@ -1113,6 +1145,10 @@ Voice.TimeStamp=2021.03.03-09.03.13
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.03.03-09.03.10
 MovieSceneCapture.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2021.03.03-09.03.58
+StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.03.03-09.03.48
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -1134,9 +1170,21 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/map3vs3
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/map3vs3/mapka1_Plane.mapka1_Plane;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_014.mapka1_Cube_014;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_013.mapka1_Cube_013;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_012.mapka1_Cube_012;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_011.mapka1_Cube_011;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_010.mapka1_Cube_010;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_009.mapka1_Cube_009;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_008.mapka1_Cube_008;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_002.mapka1_Cube_002;
+RecentlyPlaced=/Game/map3vs3/mapka1_Cube_001.mapka1_Cube_001;
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Killer.Killer;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 
@@ -1158,10 +1206,20 @@ InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Blueprints/Killer
-MRUItem2=/Game/FirstPersonBP/Blueprints/HealthUI
-MRUItem3=/Game/FirstPersonBP/Blueprints/NewWidgetBlueprint
+MRUItem0=/Game/map3vs3/mapka1_Cube_011
+MRUItem1=/Game/map3vs3/mapka1_Cube_010
+MRUItem2=/Game/map3vs3/mapka1_Cube_012
+MRUItem3=/Game/map3vs3/mapka1_Cube_008
+MRUItem4=/Game/map3vs3/mapka1_Cube_002
+MRUItem5=/Game/map3vs3/mapka1_Cube_009
+MRUItem6=/Game/map3vs3/mapka1_Cube_014
+MRUItem7=/Game/map3vs3/mapka1_Cube_013
+MRUItem8=/Game/map3vs3/mapka1_Plane
+MRUItem9=/Game/map3vs3/mapka1_Cube_001
+MRUItem10=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem11=/Game/FirstPersonBP/Blueprints/Killer
+MRUItem12=/Game/FirstPersonBP/Blueprints/HealthUI
+MRUItem13=/Game/FirstPersonBP/Blueprints/NewWidgetBlueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -1263,4 +1321,114 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=True
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
