--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,6 +80,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/map3vs3/Material_004.Material_004
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -708,7 +709,7 @@ MaterialExpression.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=930.000 Y=263.000
-ScreenPosition=X=320.000 Y=164.000
+ScreenPosition=X=320.000 Y=169.000
 None=======
 WindowSize=X=1281.000 Y=720.000
 InitiallyMaximized=True
@@ -2425,8 +2426,8 @@ InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/map3vs3/2nd
-MRUItem1=/Game/map3vs3/Material_004
+MRUItem0=/Game/map3vs3/Material_004
+MRUItem1=/Game/map3vs3/2nd
 MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
 MRUItem4=/Game/map3vs3/mapka1_Cube_011
@@ -2749,7 +2750,7 @@ InputSettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[25]\" "
-Object="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object.Constant\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2757,7 +2758,7 @@ GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 MaterialExpressionConstant4Vector="\"Object.Constant\" "
-MaterialExpression=
+MaterialExpression="\"Object.Constant\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2780,7 +2781,6 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
-bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
