bardziej widoczne 2 pietro

--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,6 +80,7 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/map3vs3/Material_004.Material_004
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -183,7 +184,7 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=LightingResults
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -805,7 +806,7 @@ AtmosphericFog.Actor=True
 
 [RootWindow]
 ScreenPosition=X=930.000 Y=263.000
-ScreenPosition=X=474.000 Y=150.000
+ScreenPosition=X=611.000 Y=67.000
 None=======
 WindowSize=X=1281.000 Y=825.000
 InitiallyMaximized=True
@@ -2490,6 +2491,7 @@ NewLevelDialog.TimeStamp=2021.03.03-09.03.52
 NewLevelDialog.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/test/2nd__.2nd__;
 RecentlyPlaced=/Game/test/makpatest2_schody2.makpatest2_schody2;
 RecentlyPlaced=/Game/test/makpatest2_schody.makpatest2_schody;
 RecentlyPlaced=/Game/test/makpatest2_Plane.makpatest2_Plane;
@@ -2509,7 +2511,6 @@ RecentlyPlaced=/Game/test/makpatest_Cube_014.makpatest_Cube_014;
 RecentlyPlaced=/Game/test/makpatest_Cube_013.makpatest_Cube_013;
 RecentlyPlaced=/Game/test/makpatest_Cube_012.makpatest_Cube_012;
 RecentlyPlaced=/Game/test/makpatest_Cube_011.makpatest_Cube_011;
-RecentlyPlaced=/Game/test/makpatest_Cube_010.makpatest_Cube_010;
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2530,20 +2531,20 @@ InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
 MRUItem0=/Game/map3vs3/Material_004
-MRUItem1=/Game/test/makpatest2_Cube_011
-MRUItem2=/Game/test/makpatest2_schody2
-MRUItem3=/Game/test/makpatest2_schody
-MRUItem4=/Game/test/makpatest2_Cube_001
-MRUItem5=/Game/test/makpatest_Cube_011
-MRUItem6=/Game/test/makpatest_schody
-MRUItem7=/Game/test/makpatest_Cube_001
-MRUItem8=/Game/Materials/SkySphere
-MRUItem9=/Game/Materials/SpaceSky
-MRUItem10=/Game/Materials/SkyBox
-MRUItem11=/Game/Materials/Space_skybox_bp
-MRUItem12=/Game/Materials/d878ac9bd86d4da1b9f75b8fc27d837a
-MRUItem13=/Game/Materials/HDRI/Skybox_Master
-MRUItem14=/Game/map3vs3/2nd
+MRUItem1=/Game/map3vs3/2nd
+MRUItem2=/Game/test/makpatest2_Cube_011
+MRUItem3=/Game/test/makpatest2_schody2
+MRUItem4=/Game/test/makpatest2_schody
+MRUItem5=/Game/test/makpatest2_Cube_001
+MRUItem6=/Game/test/makpatest_Cube_011
+MRUItem7=/Game/test/makpatest_schody
+MRUItem8=/Game/test/makpatest_Cube_001
+MRUItem9=/Game/Materials/SkySphere
+MRUItem10=/Game/Materials/SpaceSky
+MRUItem11=/Game/Materials/SkyBox
+MRUItem12=/Game/Materials/Space_skybox_bp
+MRUItem13=/Game/Materials/d878ac9bd86d4da1b9f75b8fc27d837a
+MRUItem14=/Game/Materials/HDRI/Skybox_Master
 MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
 MRUItem17=/Game/map3vs3/mapka1_Cube_011
@@ -2899,7 +2900,6 @@ DisplayActorsCount=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
