Jump Pad + Speed Boost

--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/map3vs3/Boosts/SpeedBoost.SpeedBoost
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -176,7 +177,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/map3vs3
+ContentBrowserTab1.SelectedPaths=/Game/map3vs3/Boosts
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -802,6 +803,44 @@ AtmosphericFog.Activation=True
 AtmosphericFog.Cooking=True
 AtmosphericFog.Replication=True
 AtmosphericFog.Actor=True
+JumpPad_C.Tick=True
+JumpPad_C.Replication=True
+JumpPad_C.Rendering=True
+JumpPad_C.Collision=True
+JumpPad_C.Actor=True
+JumpPad_C.Input=True
+StaticMeshSimulationComponent.Variable=True
+StaticMeshSimulationComponent.Warning=True
+StaticMeshSimulationComponent.Sockets=True
+StaticMeshSimulationComponent.ChaosPhysics=True
+StaticMeshSimulationComponent.ComponentTick=True
+StaticMeshSimulationComponent.Tags=True
+StaticMeshSimulationComponent.ComponentReplication=True
+StaticMeshSimulationComponent.Activation=True
+StaticMeshSimulationComponent.Cooking=True
+StaticMeshSimulationComponent.Events=True
+JumpPad_C.TransformCommon=True
+SpeedBoost_C.Tick=True
+SpeedBoost_C.Replication=True
+SpeedBoost_C.Rendering=True
+SpeedBoost_C.Collision=True
+SpeedBoost_C.Actor=True
+SpeedBoost_C.Input=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.ComponentTick=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+K2Node_CustomEvent.GraphNodeDetail=True
+SpeedBoost_C.TransformCommon=True
+K2Node_VariableGet.Events=True
 
 [RootWindow]
 ScreenPosition=X=930.000 Y=263.000
@@ -824,7 +863,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/micsz/Desktop/studia/Interstellar-Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
+UNR=E:/CDV Gry/Projekt Zespołowy(2)/Interstellar Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBX=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBXAnim=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
@@ -2466,8 +2505,8 @@ WidgetCarousel.TimeStamp=2021.03.03-09.03.13
 WidgetCarousel.TimeStamp=2021.05.12-06.50.27
 WidgetCarousel.LastCompileMethod=Unknown
 WidgetCarousel.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2021.03.03-09.03.06
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.05.12-06.50.13
+BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2021.03.03-09.03.11
 SequencerWidgets.LastCompileMethod=Unknown
 Voice.TimeStamp=2021.05.12-06.50.26
@@ -2476,8 +2515,8 @@ MovieSceneCapture.TimeStamp=2021.05.12-06.50.21
 MovieSceneCapture.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2021.03.03-09.03.58
 StaticMeshEditor.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2021.03.03-09.03.48
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.05.12-06.50.18
+HierarchicalLODUtilities.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.03.03-07.23.29
 ExternalImagePicker.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2021.05.12-06.50.20
@@ -2490,6 +2529,8 @@ NewLevelDialog.TimeStamp=2021.03.03-09.03.52
 NewLevelDialog.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/map3vs3/Boosts/SpeedBoost.SpeedBoost;
+RecentlyPlaced=/Game/map3vs3/JumpPad.JumpPad;
 RecentlyPlaced=/Game/test/2nd__.2nd__;
 RecentlyPlaced=/Game/test/makpatest2_schody2.makpatest2_schody2;
 RecentlyPlaced=/Game/test/makpatest2_schody.makpatest2_schody;
@@ -2508,8 +2549,6 @@ RecentlyPlaced=/Game/test/makpatest_schody.makpatest_schody;
 RecentlyPlaced=/Game/test/makpatest_Plane.makpatest_Plane;
 RecentlyPlaced=/Game/test/makpatest_Cube_014.makpatest_Cube_014;
 RecentlyPlaced=/Game/test/makpatest_Cube_013.makpatest_Cube_013;
-RecentlyPlaced=/Game/test/makpatest_Cube_012.makpatest_Cube_012;
-RecentlyPlaced=/Game/test/makpatest_Cube_011.makpatest_Cube_011;
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2529,26 +2568,26 @@ InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/map3vs3/2nd
-MRUItem1=/Game/map3vs3/Material_004
-MRUItem2=/Game/test/makpatest2_Cube_011
-MRUItem3=/Game/test/makpatest2_schody2
-MRUItem4=/Game/test/makpatest2_schody
-MRUItem5=/Game/test/makpatest2_Cube_001
-MRUItem6=/Game/test/makpatest_Cube_011
-MRUItem7=/Game/test/makpatest_schody
-MRUItem8=/Game/test/makpatest_Cube_001
-MRUItem9=/Game/Materials/SkySphere
-MRUItem10=/Game/Materials/SpaceSky
-MRUItem11=/Game/Materials/SkyBox
-MRUItem12=/Game/Materials/Space_skybox_bp
-MRUItem13=/Game/Materials/d878ac9bd86d4da1b9f75b8fc27d837a
-MRUItem14=/Game/Materials/HDRI/Skybox_Master
-MRUItem15=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem16=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem17=/Game/map3vs3/mapka1_Cube_011
-MRUItem18=/Game/map3vs3/mapka1_Cube_010
-MRUItem19=/Game/map3vs3/mapka1_Cube_012
+MRUItem0=/Game/map3vs3/Boosts/SpeedBoost
+MRUItem1=/Game/map3vs3/JumpPad
+MRUItem2=/Game/map3vs3/Material_004
+MRUItem3=/Game/map3vs3/2nd
+MRUItem4=/Game/test/makpatest2_Cube_011
+MRUItem5=/Game/test/makpatest2_schody2
+MRUItem6=/Game/test/makpatest2_schody
+MRUItem7=/Game/test/makpatest2_Cube_001
+MRUItem8=/Game/test/makpatest_Cube_011
+MRUItem9=/Game/test/makpatest_schody
+MRUItem10=/Game/test/makpatest_Cube_001
+MRUItem11=/Game/Materials/SkySphere
+MRUItem12=/Game/Materials/SpaceSky
+MRUItem13=/Game/Materials/SkyBox
+MRUItem14=/Game/Materials/Space_skybox_bp
+MRUItem15=/Game/Materials/d878ac9bd86d4da1b9f75b8fc27d837a
+MRUItem16=/Game/Materials/HDRI/Skybox_Master
+MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem19=/Game/map3vs3/mapka1_Cube_011
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2568,6 +2607,7 @@ MRUItem19=/Game/map3vs3/mapka1_Cube_012
 /Game/test/makpatest2_schody.makpatest2_schody=1
 /Game/test/makpatest2_schody2.makpatest2_schody2=1
 /Game/test/makpatest2_Cube_011.makpatest2_Cube_011=1
+/Game/map3vs3/JumpPad.JumpPad=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2878,6 +2918,11 @@ MaterialExpression=
 StaticMesh=
 StreamableRenderAsset=
 StaticMeshActor=
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+SceneComponent=
+ActorComponent=
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
@@ -2899,6 +2944,7 @@ DisplayActorsCount=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
