--- a/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InterstellarWarriors/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,11 +76,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/FirstPersonBP/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/map3vs3/Boosts/SpeedBoost.SpeedBoost
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -136,7 +135,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/Main
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -177,11 +177,9 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.CurrentViewType=1
-<<<<<<< Updated upstream
 ContentBrowserTab1.SelectedPaths=/Game/map3vs3/Boosts
-=======
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
->>>>>>> Stashed changes
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -190,11 +188,9 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [MessageLog]
-<<<<<<< Updated upstream
 LastLogListing=LightingResults
-=======
-LastLogListing=FBXImport
->>>>>>> Stashed changes
+LastLogListing=LoadErrors
+None=======
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -813,7 +809,6 @@ AtmosphericFog.Activation=True
 AtmosphericFog.Cooking=True
 AtmosphericFog.Replication=True
 AtmosphericFog.Actor=True
-<<<<<<< Updated upstream
 JumpPad_C.Tick=True
 JumpPad_C.Replication=True
 JumpPad_C.Rendering=True
@@ -852,7 +847,8 @@ K2Node_Timeline.GraphNodeDetail=True
 K2Node_CustomEvent.GraphNodeDetail=True
 SpeedBoost_C.TransformCommon=True
 K2Node_VariableGet.Events=True
-=======
+None=======
+None=======
 FirstPersonExampleMap_C.Tick=True
 FirstPersonExampleMap_C.Replication=True
 FirstPersonExampleMap_C.Actor=True
@@ -880,7 +876,91 @@ DamageFX_C.Accessibility=True
 DamageFX_C.Clipping=True
 DamageFX_C.Navigation=True
 DamageFX_C.Localization=True
->>>>>>> Stashed changes
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+MainMenu_C.Appearance=True
+MainMenu_C.Input=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Interaction=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Performance=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+MainMenu_C.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+MainMenu_C.Designer=True
+MainMenu_C.Layout=True
+PropertyWrapper.Events=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+PauseMenu_C.Appearance=True
+PauseMenu_C.Designer=True
+PauseMenu_C.Input=True
+PauseMenu_C.Interaction=True
+PauseMenu_C.Performance=True
+PauseMenu_C.Layout=True
+PauseMenu_C.Behavior=True
+PauseMenu_C.Render Transform=True
+PauseMenu_C.Accessibility=True
+PauseMenu_C.Clipping=True
+PauseMenu_C.Navigation=True
+PauseMenu_C.Localization=True
+Main_C.Tick=True
+Main_C.Replication=True
+Main_C.Actor=True
+Main_C.Input=True
+HealthUI_C.Appearance=True
+HealthUI_C.Designer=True
+HealthUI_C.Input=True
+HealthUI_C.Interaction=True
+HealthUI_C.Performance=True
+HealthUI_C.Layout=True
+HealthUI_C.Behavior=True
+HealthUI_C.Render Transform=True
+HealthUI_C.Accessibility=True
+HealthUI_C.Clipping=True
+HealthUI_C.Navigation=True
+HealthUI_C.Localization=True
+K2Node_VariableSet.Events=True
 
 [RootWindow]
 ScreenPosition=X=930.000 Y=263.000
@@ -903,7 +983,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/CDV Gry/Projekt Zespołowy(2)/Interstellar Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
+UNR=../../../../../Moje/trh/projekt_zespolowy/Unreal/Interstellar-Warriors/InterstellarWarriors/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBX=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
 FBXAnim=../../../../../../Users/micsz/Desktop/Interstellar-Warriors/InterstellarWarriors/Content/
@@ -2547,13 +2627,11 @@ WidgetCarousel.LastCompileMethod=Unknown
 WidgetCarousel.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2021.05.12-06.50.13
 BlueprintGraph.LastCompileMethod=External
-<<<<<<< Updated upstream
 SequencerWidgets.TimeStamp=2021.03.03-09.03.11
-SequencerWidgets.LastCompileMethod=Unknown
-=======
 SequencerWidgets.TimeStamp=2021.05.12-06.50.24
+SequencerWidgets.LastCompileMethod=Unknown
 SequencerWidgets.LastCompileMethod=External
->>>>>>> Stashed changes
+None=======
 Voice.TimeStamp=2021.05.12-06.50.26
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.05.12-06.50.21
@@ -2574,13 +2652,10 @@ NewLevelDialog.TimeStamp=2021.03.03-09.03.52
 NewLevelDialog.LastCompileMethod=Unknown
 
 [PlacementMode]
-<<<<<<< Updated upstream
 RecentlyPlaced=/Game/map3vs3/Boosts/SpeedBoost.SpeedBoost;
 RecentlyPlaced=/Game/map3vs3/JumpPad.JumpPad;
 RecentlyPlaced=/Game/test/2nd__.2nd__;
-=======
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Killer.Killer;
->>>>>>> Stashed changes
 RecentlyPlaced=/Game/test/makpatest2_schody2.makpatest2_schody2;
 RecentlyPlaced=/Game/test/makpatest2_schody.makpatest2_schody;
 RecentlyPlaced=/Game/test/makpatest2_Plane.makpatest2_Plane;
@@ -2598,11 +2673,10 @@ RecentlyPlaced=/Game/test/makpatest_schody.makpatest_schody;
 RecentlyPlaced=/Game/test/makpatest_Plane.makpatest_Plane;
 RecentlyPlaced=/Game/test/makpatest_Cube_014.makpatest_Cube_014;
 RecentlyPlaced=/Game/test/makpatest_Cube_013.makpatest_Cube_013;
-<<<<<<< Updated upstream
-=======
 RecentlyPlaced=/Game/test/makpatest_Cube_012.makpatest_Cube_012;
 RecentlyPlaced=/Game/test/makpatest_Cube_011.makpatest_Cube_011;
->>>>>>> Stashed changes
+None=======
+None=======
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2622,39 +2696,26 @@ InstalledPlugins=RigLogic
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-<<<<<<< Updated upstream
-MRUItem0=/Game/map3vs3/Boosts/SpeedBoost
-MRUItem1=/Game/map3vs3/JumpPad
-MRUItem2=/Game/map3vs3/Material_004
-MRUItem3=/Game/map3vs3/2nd
-=======
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem2=/Game/FirstPersonBP/Blueprints/DamageFX
-MRUItem3=/Game/map3vs3/Material_004
->>>>>>> Stashed changes
-MRUItem4=/Game/test/makpatest2_Cube_011
-MRUItem5=/Game/test/makpatest2_schody2
-MRUItem6=/Game/test/makpatest2_schody
-MRUItem7=/Game/test/makpatest2_Cube_001
-MRUItem8=/Game/test/makpatest_Cube_011
-MRUItem9=/Game/test/makpatest_schody
-MRUItem10=/Game/test/makpatest_Cube_001
-MRUItem11=/Game/Materials/SkySphere
-MRUItem12=/Game/Materials/SpaceSky
-MRUItem13=/Game/Materials/SkyBox
-MRUItem14=/Game/Materials/Space_skybox_bp
-MRUItem15=/Game/Materials/d878ac9bd86d4da1b9f75b8fc27d837a
-MRUItem16=/Game/Materials/HDRI/Skybox_Master
-<<<<<<< Updated upstream
-MRUItem17=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem18=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem19=/Game/map3vs3/mapka1_Cube_011
-=======
-MRUItem17=/Game/map3vs3/2nd
-MRUItem18=/Game/map3vs3/mapka1_Cube_011
-MRUItem19=/Game/map3vs3/mapka1_Cube_010
->>>>>>> Stashed changes
+MRUItem0=/Game/FirstPersonBP/Maps/Main
+MRUItem1=/Game/FirstPersonBP/Blueprints/MainMenu
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/FirstPersonBP/Blueprints/HealthUI
+MRUItem4=/Game/FirstPersonBP/Blueprints/DamageFX
+MRUItem5=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem6=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem8=/Game/map3vs3/Material_004
+MRUItem9=/Game/test/makpatest2_Cube_011
+MRUItem10=/Game/test/makpatest2_schody2
+MRUItem11=/Game/test/makpatest2_schody
+MRUItem12=/Game/test/makpatest2_Cube_001
+MRUItem13=/Game/test/makpatest_Cube_011
+MRUItem14=/Game/test/makpatest_schody
+MRUItem15=/Game/test/makpatest_Cube_001
+MRUItem16=/Game/Materials/SkySphere
+MRUItem17=/Game/Materials/SpaceSky
+MRUItem18=/Game/Materials/SkyBox
+MRUItem19=/Game/Materials/Space_skybox_bp
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
@@ -2674,12 +2735,13 @@ MRUItem19=/Game/map3vs3/mapka1_Cube_010
 /Game/test/makpatest2_schody.makpatest2_schody=1
 /Game/test/makpatest2_schody2.makpatest2_schody2=1
 /Game/test/makpatest2_Cube_011.makpatest2_Cube_011=1
-<<<<<<< Updated upstream
 /Game/map3vs3/JumpPad.JumpPad=1
-=======
+None=======
 /Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
 /Game/FirstPersonBP/Blueprints/DamageFX.DamageFX=1
->>>>>>> Stashed changes
+/Game/FirstPersonBP/Blueprints/MainMenu.MainMenu=1
+/Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu=1
+/Game/FirstPersonBP/Maps/Main.Main:PersistentLevel.Main=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2970,6 +3032,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 StaticMesh=StaticMesh.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2978,7 +3041,7 @@ InputSettings=True
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[25]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2990,19 +3053,25 @@ MaterialExpression=
 StaticMesh=
 StreamableRenderAsset=
 StaticMeshActor=
-<<<<<<< Updated upstream
 StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 SceneComponent=
 ActorComponent=
-=======
+None=======
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" "
 DamageFX_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
->>>>>>> Stashed changes
+MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" "
+PauseMenu_C="\"Object.Appearance.ColorAndOpacity\" "
+HealthUI_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
